--- a/foundation-essentials-5.5.3/index.html
+++ b/foundation-essentials-5.5.3/index.html
@@ -74,7 +74,7 @@ calling (402) 366-9829 or<a href="mailto:support@rodeoanalytics.com"> Email us! 
 
                     <p>Video & Analysis:<strike>$19.99</strike> $9.99</p>
 
-<p>We are currently running a 50% discount on all orders made in 2015!</p>
+<p>50% off all orders made in 2015!</p>
           
 	        	</div>  
 	        	</div>   
@@ -111,8 +111,6 @@ calling (402) 366-9829 or<a href="mailto:support@rodeoanalytics.com"> Email us! 
        </body>
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
+ 
 
 </html>
